k8s/mysql/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-headless
  namespace: sa-p5
  labels:
    app: mysql
spec:
  clusterIP: None
  selector:
    app: mysql
  ports:
    - name: mysql
      port: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: sa-p5
  labels:
    app: mysql
spec:
  type: ClusterIP
  selector:
    app: mysql
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
